--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Francesco Preta"
+title                    : ""
 title_separator          : "-"
 name                     : &name "Francesco Preta"
 description              : &description "PhD Student in Mathematics, Courant Institute of Mathematical Sciences NYU"
@@ -80,15 +80,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Francesco"
+  name             : "Francesco Preta"
   avatar           : "profile.png"
-  bio              : "Italian Mathematician in New York interested in Hyperbolic Geometry, Topology and applications to Machine Learning"
+  bio              : ""PhD Student in Mathematics, Courant Institute of Mathematical Sciences NYU""
   location         : "New York City"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  pubmed           : 
+  googlescholar    : 
+  email            : "fp627@nyu.edu"
+  researchgate     : "https://www.researchgate.net/profile/Francesco_Preta"
   uri              :
   bitbucket        :
   codepen          :
@@ -96,20 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "https://github.com/FPreta"
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      : 
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "https://www.linkedin.com/in/francesco-preta-369051171/"
+  orcid            : 
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
