--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Francesco Preta"
   avatar           : "profile.png"
-  bio              : ""PhD Student in Mathematics, Courant Institute of Mathematical Sciences NYU""
+  bio              : "PhD Student in Mathematics, Courant Institute of Mathematical Sciences NYU"
   location         : "New York City"
   employer         :
   pubmed           : 
